--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     </header>
     <section>
         <p>Esta es una simple página web para aprender Git y Github</p>
+        <p>Realizamos nuestro segundo commit</p>
     </section>
     <footer>
         <p>Desarrollado por Fernando Ureña Herrero</p>
