Cambio de última hora
Añadida línea en el header.

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body>
     <header>
         <h1>Bienvenido a mi aplicacion</h1>
+        <h2>Esta aplicación esta cargada de mejoras</h2>
     </header>
     <section>
         <p>Esta es una simple página web para aprender Git y Github</p>
